--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,7 @@
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
+	<script src="http://debug.phonegap.com/target/target-script-min.js#siavash-t3"></script>
 </head>
 <body>
     <div id="appLoadingIndicator">
