first data transfer and server connectivity test

--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,8 @@
             name: "Default"
         };
     </script>
-    <script src="sencha-touch-all.js"></script>
-    <link rel="stylesheet" href="sencha-touch.css">
+    <script src="./sencha-touch-all.js"></script>
+    <link rel="stylesheet" href="./resources/css/sencha-touch.css">
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body></body>
