--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>tapp</title>
+	<script src="phonegap.js"></script>
     <script>
         var Ext = Ext || {};
         Ext.theme = {
